Fix for text inputs cutting off text in safari added to inputs stylesheets

--- a/assets/_scss/elements/_inputs.scss
+++ b/assets/_scss/elements/_inputs.scss
@@ -364,10 +364,10 @@ input[type=range]:focus::-ms-thumb {
     min-width: 100px;
     width: 100%;
     box-shadow: none;
-    height: 34px;
+    height: auto;
     margin-bottom: 28px;
     outline: none;
-    padding: 12px 8px;
+    padding: 6px 8px;
     -webkit-font-smoothing: antialiased;
     appearance: none;
   }
